--- a/rockpaperscissors.css
+++ b/rockpaperscissors.css
@@ -7,7 +7,7 @@ ul, li {
 /*  end resets  */
 
 body {
-  font: normal 24px 'Fredoka One', 'Helvetica', Arial, Sans-serif;
+  font: normal 4vh 'Fredoka One', 'Helvetica', Arial, Sans-serif;
 }
 
 div.container {
@@ -20,7 +20,7 @@ div.container {
 
 section#alert-box {
   width: 100%;
-  height: 10vh;
+  height: 15vh;
   padding: 10px;
   box-sizing: border-box;
   text-align: center;
@@ -54,7 +54,7 @@ header:after {
 header div {
   float: left;
   width: 50%;
-  font-size: 16vh;
+  font-size: 11vh;
 }
 
 header ul li {
@@ -104,7 +104,7 @@ header ul li {
 }
 
 section#hands {
-  height: 60vh;
+  height: 40vh;
 }
 section#hands:after {
   display: block;
@@ -112,10 +112,18 @@ section#hands:after {
   clear: both;
 }
 
-.hand {
+.hand-container {
   display: inline-block;
-  width: 50%;
   height: 100%;
+  width: 50%;
+  text-align: center;
+}
+
+/*  for the hands the width becomes height
+and height becomes width due to rotation  */
+.hand {
+  width: 160px;
+  margin: 0 auto;
 }
 
 #player-hand {
@@ -152,17 +160,60 @@ section#hands:after {
   background-size: 100% 100%;
 }
 
+ul#controls {
+  height: 20vh;
+  padding: 0 0 5vh 0;
+  box-sizing: border-box;
+}
+
+ul#controls li {
+  display: inline-block;
+  height: 100%;
+  width: 33%;
+}
+
 footer {
   position: fixed;
-  height: 10vh;
+  height: 5vh;
   bottom: 0;
   left: 0;
   right: 0;
   text-align: center;
+  font-size: 3vh;
   color: lightblue;
 }
 
 footer a {
   color: lightblue;
   text-decoration: none;
+}
+
+@media (min-height: 500px) and (min-width: 544px) {
+  section#alert-box {
+    height: 10vh;
+  }
+
+  section#hands {
+    height: 45vh;
+  }
+
+  .hand {
+    width: 220px;
+  }
+
+  header div {
+    font-size: 16vh;
+  }
+}
+
+@media (min-height: 700px) and (min-width: 768px) {
+  .hand {
+    width: 340px;
+  }
+}
+
+@media (min-height: 900px) and (min-width: 992px) {
+  .hand {
+    width: 380px;
+  }
 }
